change login and signup buttons text

--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-14 00:24+0000\n"
+"POT-Creation-Date: 2023-02-14 02:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,7 +19,6 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
-
 #: task_manager/templates/index.html:8
 msgid "Hello From Hexlet"
 msgstr "Привет от Хекслета!"
@@ -62,19 +61,25 @@ msgid "Log Out"
 msgstr "Выход"
 
 #: task_manager/templates/layout/default.html:50
-#: task_manager/templates/login.html:10
 msgid "Log In"
 msgstr "Вход"
 
 #: task_manager/templates/layout/default.html:53
 #: task_manager/templates/users/registration.html:6
-#: task_manager/templates/users/registration.html:10
 msgid "Register"
 msgstr "Регистрация"
 
 #: task_manager/templates/login.html:6
 msgid "Enter"
 msgstr "Вход"
+
+#: task_manager/templates/login.html:10
+msgid "Log In Button"
+msgstr "Войти"
+
+#: task_manager/templates/users/registration.html:10
+msgid "Sign Up Button"
+msgstr "Зарегистрировать"
 
 #: task_manager/templates/users/users_list.html:11
 msgid "Username"
