--- a/task_manager/locale/en/LC_MESSAGES/django.po
+++ b/task_manager/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-14 00:24+0000\n"
+"POT-Creation-Date: 2023-02-14 02:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,7 +17,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
 #: task_manager/templates/index.html:8
 msgid "Hello From Hexlet"
 msgstr "Hello from Hexlet!"
@@ -60,19 +59,25 @@ msgid "Log Out"
 msgstr "Log out"
 
 #: task_manager/templates/layout/default.html:50
-#: task_manager/templates/login.html:10
 msgid "Log In"
 msgstr "Log in"
 
 #: task_manager/templates/layout/default.html:53
 #: task_manager/templates/users/registration.html:6
-#: task_manager/templates/users/registration.html:10
 msgid "Register"
 msgstr "Register"
 
 #: task_manager/templates/login.html:6
 msgid "Enter"
 msgstr "Enter"
+
+#: task_manager/templates/login.html:10
+msgid "Log In Button"
+msgstr "Login"
+
+#: task_manager/templates/users/registration.html:10
+msgid "Sign Up Button"
+msgstr "Sign up"
 
 #: task_manager/templates/users/users_list.html:11
 msgid "Username"
