--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-14 02:05+0000\n"
+"POT-Creation-Date: 2023-02-14 22:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: task_manager/templates/index.html:8
 msgid "Hello From Hexlet"
 msgstr "Привет от Хекслета!"
@@ -65,7 +66,7 @@ msgid "Log In"
 msgstr "Вход"
 
 #: task_manager/templates/layout/default.html:53
-#: task_manager/templates/users/registration.html:6
+#: task_manager/templates/users/user_create.html:6
 msgid "Register"
 msgstr "Регистрация"
 
@@ -77,9 +78,29 @@ msgstr "Вход"
 msgid "Log In Button"
 msgstr "Войти"
 
-#: task_manager/templates/users/registration.html:10
+#: task_manager/templates/users/user_create.html:10
 msgid "Sign Up Button"
 msgstr "Зарегистрировать"
+
+#: task_manager/templates/users/user_delete.html:6
+msgid "Delete user"
+msgstr "Удаление пользователя"
+
+#: task_manager/templates/users/user_delete.html:9
+msgid "Are you sure you want to delete"
+msgstr "Вы уверены, что хотите удалить"
+
+#: task_manager/templates/users/user_delete.html:10
+msgid "Delete Button"
+msgstr "Да, удалить"
+
+#: task_manager/templates/users/user_update.html:6
+msgid "Update user"
+msgstr "Изменение пользователя"
+
+#: task_manager/templates/users/user_update.html:10
+msgid "Update Button"
+msgstr "Изменить"
 
 #: task_manager/templates/users/users_list.html:11
 msgid "Username"
@@ -113,9 +134,29 @@ msgstr "Фамилия"
 msgid "Password should contain at least 3 characters"
 msgstr "Ваш пароль должен содержать как минимум 3 символа."
 
-#: task_manager/users/views.py:20
+#: task_manager/users/mixins.py:16
+msgid "You aren't authorized! Please log in."
+msgstr "Вы не авторизованы! Пожалуйста, выполните вход."
+
+#: task_manager/users/views.py:21
 msgid "User is successfully registered"
 msgstr "Пользователь успешно зарегистрирован"
+
+#: task_manager/users/views.py:29
+msgid "User is successfully changed"
+msgstr "Пользователь успешно изменён"
+
+#: task_manager/users/views.py:30
+msgid "You don't have permission to change another user."
+msgstr "У вас нет прав для изменения другого пользователя."
+
+#: task_manager/users/views.py:37
+msgid "User is successfully deleted"
+msgstr "Пользователь успешно удален"
+
+#: task_manager/users/views.py:38
+msgid "You don't have permission to delete another user."
+msgstr "У вас нет прав для удаления другого пользователя."
 
 #: task_manager/views.py:16
 msgid "You are logged in"
