major internationalization refactor

--- a/task_manager/locale/en/LC_MESSAGES/django.po
+++ b/task_manager/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-16 21:53+0000\n"
+"POT-Creation-Date: 2023-02-18 16:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,33 +17,69 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+#: task_manager/statuses/forms.py:10 task_manager/statuses/forms.py:11
+#: task_manager/templates/statuses/statuses_list.html:13
+msgid "Name"
+msgstr "Name"
+
+#: task_manager/statuses/mixins.py:12 task_manager/users/mixins.py:13
+msgid "AuthorizationRequired"
+msgstr "You aren't authorized! Please log in."
+
+#: task_manager/statuses/views.py:21
+msgid "StatusCreateSuccess"
+msgstr "Status is successfully created"
+
+#: task_manager/statuses/views.py:29
+msgid "StatusUpdateSuccess"
+msgstr "Status is successfully updated"
+
+#: task_manager/statuses/views.py:36
+msgid "StatusDeleteSuccess"
+msgstr "Status is successfully deleted"
 
 #: task_manager/templates/index.html:8
-msgid "Hello From Hexlet"
-msgstr "Hello from Hexlet"
+msgid "HelloMessage"
+msgstr "Hello from Hexlet!"
 
 #: task_manager/templates/index.html:9
-msgid "Practical Programming Courses"
+msgid "MainIndexContentInfo"
 msgstr "Practical programming courses"
 
 #: task_manager/templates/index.html:11
-msgid "Get More Info"
+msgid "ButtonGetMoreInfo"
 msgstr "Get more information"
 
 #: task_manager/templates/layout/default.html:11
-msgid "Hexlet Task Manager"
+#: task_manager/templates/login.html:5
+#: task_manager/templates/statuses/status_create.html:5
+#: task_manager/templates/statuses/status_delete.html:5
+#: task_manager/templates/statuses/status_update.html:5
+#: task_manager/templates/statuses/statuses_list.html:5
+#: task_manager/templates/users/user_create.html:5
+#: task_manager/templates/users/user_delete.html:5
+#: task_manager/templates/users/user_update.html:5
+#: task_manager/templates/users/users_list.html:5
+msgid "HexletTaskManager"
 msgstr "Hexlet Task manager"
 
 #: task_manager/templates/layout/default.html:22
-msgid "Task Manager"
+msgid "TaskManager"
 msgstr "Task manager"
 
 #: task_manager/templates/layout/default.html:29
-#: task_manager/templates/users/users_list.html:6
+#: task_manager/templates/users/user_delete.html:5
+#: task_manager/templates/users/user_update.html:5
+#: task_manager/templates/users/users_list.html:5
+#: task_manager/templates/users/users_list.html:7
 msgid "Users"
 msgstr "Users"
 
 #: task_manager/templates/layout/default.html:33
+#: task_manager/templates/statuses/status_delete.html:5
+#: task_manager/templates/statuses/status_update.html:5
+#: task_manager/templates/statuses/statuses_list.html:5
+#: task_manager/templates/statuses/statuses_list.html:7
 msgid "Statuses"
 msgstr "Statuses"
 
@@ -56,118 +92,140 @@ msgid "Tasks"
 msgstr "Tasks"
 
 #: task_manager/templates/layout/default.html:46
-msgid "Log Out"
-msgstr "Log Out"
+msgid "LogOut"
+msgstr "Log out"
 
 #: task_manager/templates/layout/default.html:50
-msgid "Log In"
-msgstr "Log In"
+msgid "LogIn"
+msgstr "Log in"
 
 #: task_manager/templates/layout/default.html:53
-#: task_manager/templates/users/user_create.html:6
+#: task_manager/templates/users/user_create.html:5
+#: task_manager/templates/users/user_create.html:7
 msgid "Register"
 msgstr "Register"
 
-#: task_manager/templates/login.html:6
+#: task_manager/templates/login.html:5 task_manager/templates/login.html:7
 msgid "Enter"
 msgstr "Enter"
 
-#: task_manager/templates/login.html:11
-msgid "Log In Button"
-msgstr "Login"
+#: task_manager/templates/login.html:12
+msgid "ButtonSignIn"
+msgstr "Sign in"
 
-#: task_manager/templates/login.html:14
-msgid "You are already logged in! Try logging out and signing in again."
+#: task_manager/templates/login.html:15
+msgid "AuthorizationAlreadyLogIn"
 msgstr "You are already logged in! Try logging out and signing in again."
 
-#: task_manager/templates/users/user_create.html:11
-msgid "Sign Up Button"
-msgstr "Sign up"
+#: task_manager/templates/statuses/status_create.html:5
+#: task_manager/templates/statuses/status_create.html:7
+#: task_manager/templates/statuses/statuses_list.html:8
+msgid "StatusCreate"
+msgstr "Create status"
 
-#: task_manager/templates/users/user_create.html:14
-msgid "You can't register a new user when you are already logged in! Try logging out and signing up again."
-msgstr "You can't register a new user when you are already logged in! Try logging out and signing up again."
+#: task_manager/templates/statuses/status_create.html:11
+msgid "ButtonCreate"
+msgstr "Create"
 
-#: task_manager/templates/users/user_delete.html:6
-msgid "Delete user"
-msgstr "Delete user"
+#: task_manager/templates/statuses/status_delete.html:5
+#: task_manager/templates/statuses/status_delete.html:7
+msgid "StatusDelete"
+msgstr "Delete status"
 
-#: task_manager/templates/users/user_delete.html:9
-msgid "Are you sure you want to delete"
+#: task_manager/templates/statuses/status_delete.html:10
+#: task_manager/templates/users/user_delete.html:10
+msgid "DeleteConfirmQuestion"
 msgstr "Are you sure you want to delete"
 
-#: task_manager/templates/users/user_delete.html:10
-msgid "Delete Button"
+#: task_manager/templates/statuses/status_delete.html:11
+#: task_manager/templates/users/user_delete.html:11
+msgid "ButtonDeleteConfirm"
 msgstr "Yes, delete"
 
-#: task_manager/templates/users/user_update.html:6
-msgid "Update user"
-msgstr "Update user"
+#: task_manager/templates/statuses/status_update.html:5
+#: task_manager/templates/statuses/status_update.html:7
+msgid "StatusUpdate"
+msgstr "Update status"
 
-#: task_manager/templates/users/user_update.html:10
-msgid "Update Button"
-msgstr "Update"
-
-#: task_manager/templates/users/users_list.html:11
-msgid "Username"
-msgstr "Username"
-
-#: task_manager/templates/users/users_list.html:12
-msgid "Full name"
-msgstr "Full name"
-
-#: task_manager/templates/users/users_list.html:13
-msgid "Creation date"
-msgstr "Creation date"
-
-#: task_manager/templates/users/users_list.html:24
+#: task_manager/templates/statuses/status_update.html:11
+#: task_manager/templates/statuses/statuses_list.html:24
+#: task_manager/templates/users/user_update.html:11
+#: task_manager/templates/users/users_list.html:25
 msgid "Update"
 msgstr "Update"
 
-#: task_manager/templates/users/users_list.html:26
+#: task_manager/templates/statuses/statuses_list.html:14
+#: task_manager/templates/users/users_list.html:14
+msgid "CreationDate"
+msgstr "Creation date"
+
+#: task_manager/templates/statuses/statuses_list.html:26
+#: task_manager/templates/users/users_list.html:27
 msgid "Delete"
 msgstr "Delete"
 
+#: task_manager/templates/users/user_create.html:12
+msgid "ButtonSignUp"
+msgstr "Sign up"
+
+#: task_manager/templates/users/user_create.html:15
+msgid "UserRegisterDenialWhenAlreadyLogIn"
+msgstr "You can't register a new user when you are already logged in! Try logging out and signing up again."
+
+#: task_manager/templates/users/user_delete.html:5
+#: task_manager/templates/users/user_delete.html:7
+msgid "UserDelete"
+msgstr "Delete user"
+
+#: task_manager/templates/users/user_update.html:5
+#: task_manager/templates/users/user_update.html:7
+msgid "UserUpdate"
+msgstr "Update user"
+
+#: task_manager/templates/users/users_list.html:12
+msgid "Username"
+msgstr "Username"
+
+#: task_manager/templates/users/users_list.html:13
+msgid "FullName"
+msgstr "Full name"
+
 #: task_manager/users/forms.py:11 task_manager/users/forms.py:12
-msgid "First name"
+msgid "FirstName"
 msgstr "First name"
 
 #: task_manager/users/forms.py:17 task_manager/users/forms.py:18
-msgid "Last name"
+msgid "LastName"
 msgstr "Last name"
 
 #: task_manager/users/forms.py:24
-msgid "Password should contain at least 3 characters"
+msgid "PasswordLengthRequirement"
 msgstr "Password should contain at least 3 characters"
 
-#: task_manager/users/mixins.py:16
-msgid "You aren't authorized! Please log in."
-msgstr "You aren't authorized! Please log in."
-
 #: task_manager/users/views.py:21
-msgid "User is successfully registered"
+msgid "UserCreateSuccess"
 msgstr "User is successfully registered"
 
 #: task_manager/users/views.py:29
-msgid "User is successfully changed"
-msgstr "User is successfully changed"
+msgid "UserUpdateSuccess"
+msgstr "User is successfully updated"
 
 #: task_manager/users/views.py:30
-msgid "You don't have permission to change another user."
-msgstr "You don't have permission to change another user."
+msgid "UserUpdateDenial"
+msgstr "You don't have permission to update another user."
 
 #: task_manager/users/views.py:37
-msgid "User is successfully deleted"
+msgid "UserDeleteSuccess"
 msgstr "User is successfully deleted"
 
 #: task_manager/users/views.py:38
-msgid "You don't have permission to delete another user."
+msgid "UserDeleteDenial"
 msgstr "You don't have permission to delete another user."
 
 #: task_manager/views.py:16
-msgid "You are logged in"
+msgid "UserLogIn"
 msgstr "You are logged in"
 
 #: task_manager/views.py:23
-msgid "You are logged out"
+msgid "UserLogOut"
 msgstr "You are logged out"
